--- a/a-chat-app/server/.eslintrc
+++ b/a-chat-app/server/.eslintrc
@@ -5,15 +5,11 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "no-console": "error",
+    // "no-console": "error",
     "no-undef": "error",
     "no-unused-expressions": "error",
     "no-unreachable": "error",
