--- a/a-chat-app/server/.env
+++ b/a-chat-app/server/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL=mongodb://fahim:fahimkhan@localhost:27017/a-chat-app?authSource=admin
+TOKEN_KEY=abczyx
