--- a/a-chat-app/server/package.json
+++ b/a-chat-app/server/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
